--- a/RideShare/app/src/main/res/values/strings.xml
+++ b/RideShare/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_first_page">FirstPage</string>
+    <string name="title_activity_search_route">SearchRoute</string>
 </resources>
